@@ -164,14 +164,8 @@ class MakefileToolset(Toolset):
                        inheritable=False,
                        doc="Name of output file for module's makefile.")
 
-    def get_module_builddir(self, module):
-        makefile = module["%s.makefile" % self.name]
-        builddir = makefile.get_directory_path()
-        builddir.components.insert(0, expr.LiteralExpr("$(builddir)"))
-        return builddir
-
     def get_builddir_for(self, target):
-        return self.get_module_builddir(target.parent)
+        return expr.PathExpr([], expr.ANCHOR_BUILDDIR)
 
     def generate(self, project):
         # We need to know build graphs of all targets so that we can generate
@@ -205,7 +199,7 @@ class MakefileToolset(Toolset):
         paths_info = expr.PathAnchorsInfo(
                 dirsep="/", # FIXME - format-configurable
                 outfile=output,
-                builddir=self.get_module_builddir(module).as_native_path_for_output(module),
+                builddir=None,
                 model=module)
 
         mk_fmt = self.Formatter()
@@ -213,11 +207,6 @@ class MakefileToolset(Toolset):
 
         f = io.OutputFile(output, io.EOL_UNIX, creator=self, create_for=module)
         self.on_header(f, module)
-        f.write("""
-# The directory for the build files, may be overridden on make command line.
-builddir = .
-
-""")
 
         self._gen_settings(module, mk_fmt, expr_fmt, f)
 
